# deepdirect

./: .gitignore  MANIFEST.in  README.Rmd  README.md  demo.ipynb  pyproject.toml  setup.cfg  test.py
deepdirect_framework/: generator_step_1_weights.h5  model_function.py
deepdirect_paper/: Binding Affinity Predictor.py  ab_bind_data_extract.py  deepdirect_evaluation.py  evolution_analysis.py  final_model.py  model_application.py  model_evaluation_application.py  skempi_data_extract.py  train_step_1.py
demo_data/: pre.pkl  rbd.pkl  x.pkl  y.pkl  z.pkl
example/: demo_deepdirect.ipynb
example/demo_data/: noise.pkl
src/deepdirect/: __init__.py  deepdirect.py  model.py  mutator.py  utils.py
src/deepdirect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/deepdirect/weights/: model_d_weights.h5  model_i_weights.h5
test_data/: same.pkl
