[metadata]
name = deepdirect
# project_logo = ./logo/logo.svg
version = attr: deepdirect.__version__
author = Tian Lan and Penagyao Ping
author_email = lantian000@outlook.com, ping.pengyao@gmail.com
description = In silico approach to generate mutations for protein complexes towards a specified direction (increase/decrease) in binding affinity.
long_description = file: README.md
long_description_content_type = text
url = https://github.com/Jappy0/deepdirect
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires >= 3.6.8
include_package_data = True
zip_safe = False
install_requires =
    tensorflow == 2.4.0
    Keras == 2.10.0
    colorlog == 6.7.0
[options.packages.find]
where = src

[options.package_data]
deepdirect = weights/*.h5

[options.entry_points]
console_scripts =
    deepdirect = deepdirect.deepdirect:main
